--- a/www/405.html
+++ b/www/405.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 not found</title>
+    <title>405 Method Not Allowed</title>
 </head>
 <body>
     <center>
-        <h1>404 not found</h1>
+        <h1>405 Method Not Allowed</h1>
     </center>
 </body>
 </html>
