--- a/www/400.html
+++ b/www/400.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 not found</title>
+    <title>400 Bad Request</title>
 </head>
 <body>
     <center>
-        <h1>404 not found</h1>
+        <h1>400 Bad Request</h1>
     </center>
 </body>
 </html>
