--- a/www/414.html
+++ b/www/414.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 not found</title>
+    <title>414 Request-URI Too Long</title>
 </head>
 <body>
     <center>
-        <h1>404 not found</h1>
+        <h1>414 Request-URI Too Long</h1>
     </center>
 </body>
 </html>
