--- a/www/501.html
+++ b/www/501.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 not found</title>
+    <title>501 not implemented</title>
 </head>
 <body>
     <center>
-        <h1>404 not found</h1>
+        <h1>501 not implemented</h1>
     </center>
 </body>
 </html>
