detecte loop infinit

--- a/content_dir.html
+++ b/content_dir.html
@@ -4,16 +4,42 @@
 <title>autoindex</title>
 </head>
 <body>
-<h1>Index of /fil/response/cgi-bin/cgi_get_test/</h1>
+<h1>Index of /</h1>
 <ul>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/.">.</a></li>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/..">..</a></li>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/form_get.py">form_get.py</a></li>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/test1.php">test1.php</a></li>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/test2.php">test2.php</a></li>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/test3.php">test3.php</a></li>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/test_get.html">test_get.html</a></li>
-<li><a href="http://0.0.0.0:8080/fil/response/cgi-bin/cgi_get_test/while_true.php">while_true.php</a></li>
+<li><a href="http://0.0.0.0:8080/.">.</a></li>
+<li><a href="http://0.0.0.0:8080/..">..</a></li>
+<li><a href="http://0.0.0.0:8080/iSCSI">iSCSI</a></li>
+<li><a href="http://0.0.0.0:8080/.HFS+ Private Directory Data">.HFS+ Private Directory Data</a></li>
+<li><a href="http://0.0.0.0:8080/home">home</a></li>
+<li><a href="http://0.0.0.0:8080/usr">usr</a></li>
+<li><a href="http://0.0.0.0:8080/.Spotlight-V100">.Spotlight-V100</a></li>
+<li><a href="http://0.0.0.0:8080/net">net</a></li>
+<li><a href="http://0.0.0.0:8080/goinfre">goinfre</a></li>
+<li><a href="http://0.0.0.0:8080/nfs">nfs</a></li>
+<li><a href="http://0.0.0.0:8080/.PKInstallSandboxManager-SystemSoftware">.PKInstallSandboxManager-SystemSoftware</a></li>
+<li><a href="http://0.0.0.0:8080/bin">bin</a></li>
+<li><a href="http://0.0.0.0:8080/Previous Content">Previous Content</a></li>
+<li><a href="http://0.0.0.0:8080/installer.failurerequests">installer.failurerequests</a></li>
+<li><a href="http://0.0.0.0:8080/Network">Network</a></li>
+<li><a href="http://0.0.0.0:8080/sbin">sbin</a></li>
+<li><a href="http://0.0.0.0:8080/.file">.file</a></li>
+<li><a href="http://0.0.0.0:8080/etc">etc</a></li>
+<li><a href="http://0.0.0.0:8080/var">var</a></li>
+<li><a href="http://0.0.0.0:8080/Library">Library</a></li>
+<li><a href="http://0.0.0.0:8080/.Trashes">.Trashes</a></li>
+<li><a href="http://0.0.0.0:8080/System">System</a></li>
+<li><a href="http://0.0.0.0:8080/.OSInstallerMessages">.OSInstallerMessages</a></li>
+<li><a href="http://0.0.0.0:8080/.fseventsd">.fseventsd</a></li>
+<li><a href="http://0.0.0.0:8080/private">private</a></li>
+<li><a href="http://0.0.0.0:8080/.DocumentRevisions-V100">.DocumentRevisions-V100</a></li>
+<li><a href="http://0.0.0.0:8080/.vol">.vol</a></li>
+<li><a href="http://0.0.0.0:8080/Users">Users</a></li>
+<li><a href="http://0.0.0.0:8080/Applications">Applications</a></li>
+<li><a href="http://0.0.0.0:8080/dev">dev</a></li>
+<li><a href="http://0.0.0.0:8080/exam">exam</a></li>
+<li><a href="http://0.0.0.0:8080/Volumes">Volumes</a></li>
+<li><a href="http://0.0.0.0:8080/tmp">tmp</a></li>
+<li><a href="http://0.0.0.0:8080/cores">cores</a></li>
 </ul>
 </body>
 </html>
