--- a/content_dir.html
+++ b/content_dir.html
@@ -4,16 +4,23 @@
 <title>autoindex</title>
 </head>
 <body>
-<h1>Index of /response/cgi-bin/cgi_post_test/</h1>
+<h1>Index of /www/</h1>
 <ul>
-<li><a href="/response/cgi-bin/cgi_post_test/.">.</a></li>
-<li><a href="/response/cgi-bin/cgi_post_test/..">..</a></li>
-<li><a href="/response/cgi-bin/cgi_post_test/1337.png">1337.png</a></li>
-<li><a href="/response/cgi-bin/cgi_post_test/process_form.php">process_form.php</a></li>
-<li><a href="/response/cgi-bin/cgi_post_test/test_hajar.php">test_hajar.php</a></li>
-<li><a href="/response/cgi-bin/cgi_post_test/test_post.php">test_post.php</a></li>
-<li><a href="/response/cgi-bin/cgi_post_test/test_post.py">test_post.py</a></li>
-<li><a href="/response/cgi-bin/cgi_post_test/while_py.py">while_py.py</a></li>
+<li><a href="/www/.">.</a></li>
+<li><a href="/www/..">..</a></li>
+<li><a href="/www/201.html">201.html</a></li>
+<li><a href="/www/204.html">204.html</a></li>
+<li><a href="/www/400.html">400.html</a></li>
+<li><a href="/www/403.html">403.html</a></li>
+<li><a href="/www/404.html">404.html</a></li>
+<li><a href="/www/405.html">405.html</a></li>
+<li><a href="/www/409.html">409.html</a></li>
+<li><a href="/www/413.html">413.html</a></li>
+<li><a href="/www/414.html">414.html</a></li>
+<li><a href="/www/500.html">500.html</a></li>
+<li><a href="/www/501.html">501.html</a></li>
+<li><a href="/www/504.html">504.html</a></li>
+<li><a href="/www/508.html">508.html</a></li>
 </ul>
 </body>
 </html>
